# csv_converter

./: .gitignore  LICENSE  README.md  args_demo.py  csv_transformer.py  formatchanger.py  pyproject.toml
csv_converter/: __init__.py  argument_parser.py  command_runner.py  convert.py  converter.py  csv_converter.py
csv_transformer/: __init__.py  argument_parser.py  csv_transformer.py  jinja2_filters.py
csvtransformer/: __init__.py  argument_parser.py  csv_transformer.py
docs/: README.md  csv.md  memo.md  release-note.md
docs/csv/: csv-tutorial.md  tutorial.md
docs/excel/: excel-tutorial.md  tutorial.md
docs/sample/: demo.csv  demo.tmpl  details.tmpl
j2render/: __init__.py  command_runner.py  csvrendercmd.py  csvrenderlogic.py  rendercontext.py  renderlogic.py  starter.py
j2render/command/: base_command.py  command.py  command_runner.py  csv_command.py  starter.py
j2shrine/: command.py  commandutils.py  context.py  loader.py  processors.py  render.py  renderutils.py  runner.py  starter.py
templates/: test.tmpl
test/: test_argument_parser.py
tests/: test_argument_parser.py  test_config.py  test_console_message.py  test_convert.py  test_csv.py  test_csv_converter.py  test_csv_transformer.py  test_csvrender.py  test_csvrenderlogic.py  test_excel.py  test_excelrender.py  test_json.py  test_jsonrender.py  test_other.py  test_runner.py  test_starter.py  testutils.py  utils.py
text_converter/: __init__.py  convert_cmd_base.py  converter_context.py  csv_convert.py  csv_converter.py
toj2/: __init__.py  context.py  loader.py  runner.py  utils.py
(+170 files in other folders)
