[tool.poetry]
name = "j2shrine"
version = "0.1.1"
description = ""
authors = ["akio-1978 <akio.ogawa01@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Jinja2 = "^3.0.3"
openpyxl = "^3.0.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
j2shrine = 'j2shrine.runner:main'